infra/k8s/app/log-message-processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-message-processor
  namespace: microapp
  labels:
    app: log-message-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-message-processor
  template:
    metadata:
      labels:
        app: log-message-processor
    spec:
      containers:
        - name: log-message-processor
          image: ghcr.io/andre-101/microapp-log-message-processor:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
