infra/k8s/app/todos-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api
  namespace: microapp
  labels:
    app: todos-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todos-api
  template:
    metadata:
      labels:
        app: todos-api
    spec:
      containers:
        - name: todos-api
          image: ghcr.io/andre-101/microapp-todos-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: todos-api
  namespace: microapp
spec:
  selector:
    app: todos-api
  ports:
    - name: http
      port: 8082
      targetPort: 8082
