infra/k8s/app/users-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
  namespace: microapp
  labels:
    app: users-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
        - name: users-api
          image: ghcr.io/andre-101/microapp-users-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: users-api
  namespace: microapp
spec:
  selector:
    app: users-api
  ports:
    - name: http
      port: 8083
      targetPort: 8083
