infra/k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microapp-ingress
  namespace: microapp
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: auth-api
                port:
                  number: 8000
          - path: /todos
            pathType: Prefix
            backend:
              service:
                name: todos-api
                port:
                  number: 8082
